--- a/index.html
+++ b/index.html
@@ -12,6 +12,26 @@
             <h1>Bem-vindo à minha página!</h1>
             <p>Estudante de Programação</p>
         </header>
+        <main>
+            <section>
+                <h2>Minhas Habilidades</h2>
+                <ul>
+                    <li>
+                        lógica de Programação
+                    </li>
+                    <li>
+                        HTML e CSS
+                    </li>
+                    <li>
+                        Trabalho em equipe
+                    </li>
+                    <li>
+                        Redes e IOT
+                    </li>
+
+                </ul>
+            </section>
+        </main>
         
     </body>
 </html>
