--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
         </title>
     </head>
     <style>
+        body{
+            font-family: 'Franklin Gothic Medium', Arial, Helvetica, sans-serif;
+            background-color: aliceblue;
+            margin: 0;
+            padding: 0;
+        }
+
+        header{
+            background-color: aqua;
+            color: blueviolet;
+            padding: 20px;
+            text-align: center;
+        }
 
     </style>
     <body>
