--- a/index.html
+++ b/index.html
@@ -18,6 +18,23 @@
             padding: 20px;
             text-align: center;
         }
+        main{
+            padding: 20px;
+        }
+        section{
+            background-color: blue;
+            padding: 15px;
+            margin-bottom: 20px;
+            border: 1px solid;
+            border-radius: 8px;
+        }
+        h2{
+            color: black;
+        }
+
+        ul{
+            list-style-type: square;
+        }
 
     </style>
     <body>
@@ -42,6 +59,14 @@
                         Redes e IOT
                     </li>
 
+                </ul>
+            </section>
+            <section>
+                <h2>Cursos</h2>
+                <ul>
+                    <li>Curso de Intrudução à Programação</li>
+                    <li>Curso de HTML e CSS Básico</li>
+                    <li>Curso de Arduino</li>
                 </ul>
             </section>
         </main>
